recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:14: error: Unit does not take parameters
carre()
     ^FourSquare:16: error: Unit does not take parameters
carre()
     ^FourSquare:18: error: Unit does not take parameters
carre()
     ^FourSquare:20: error: Unit does not take parameters
carre()	
     ^