recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {

	def carre {
		avance(100)
		gauche(90)
		avance(100)
		gauche(90)
		avance(100)
		gauche(90)
		avance(100)
		gauche(90)
		}

carre()
setPos(200,300)
carre()
setPos(100,300)
carre()
setPos(100,200)	
carre()	
}
